--- a/src/Integration.Vsix_2017/packages.config
+++ b/src/Integration.Vsix_2017/packages.config
@@ -2,12 +2,12 @@
 <packages>
   <package id="EnvDTE" version="8.0.1" targetFramework="net46" />
   <package id="EnvDTE80" version="8.0.1" targetFramework="net46" />
-  <package id="ManagedEsent" version="1.9.4" targetFramework="net46" />
-  <package id="Microsoft.CodeAnalysis" version="2.0.0" targetFramework="net46" />
   <package id="Google.Protobuf" version="3.2.0" targetFramework="net46" />
   <package id="Grpc" version="1.2.2" targetFramework="net46" />
   <package id="Grpc.Core" version="1.2.2" targetFramework="net46" />
   <package id="Grpc.Tools" version="1.2.2" targetFramework="net46" />
+  <package id="ManagedEsent" version="1.9.4" targetFramework="net46" />
+  <package id="Microsoft.CodeAnalysis" version="2.0.0" targetFramework="net46" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net46" />
   <package id="Microsoft.CodeAnalysis.Common" version="2.0.0" targetFramework="net46" />
   <package id="Microsoft.CodeAnalysis.CSharp" version="2.0.0" targetFramework="net46" />
@@ -41,6 +41,7 @@
   <package id="Microsoft.VisualStudio.Threading" version="15.0.240" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Utilities" version="15.0.26201" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Validation" version="15.0.82" targetFramework="net46" />
+  <package id="Microsoft.VSSDK.Vsixsigntool" version="15.0.26201" targetFramework="net46" />
   <package id="SonarAnalyzer.CSharp" version="1.20.1" targetFramework="net46" developmentDependency="true" />
   <package id="stdole" version="7.0.3301" targetFramework="net46" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net46" />
