--- a/src/Integration/Integration.csproj
+++ b/src/Integration/Integration.csproj
@@ -202,6 +202,8 @@
     <Compile Include="Binding\BindingController.cs" />
     <Compile Include="Binding\IBindingOperation.cs" />
     <Compile Include="Binding\RuleSetInformation.cs" />
+    <Compile Include="Helpers\PathHelper.cs" />
+    <Compile Include="Helpers\RetryHelper.cs" />
     <Compile Include="LocalServices\IErrorListInfoBarController.cs" />
     <Compile Include="LocalServices\ErrorListInfoBarController.cs" />
     <Compile Include="LocalServices\ISolutionBindingInformationProvider.cs" />
@@ -231,7 +233,7 @@
     <Compile Include="Binding\NuGetHelper.cs" />
     <Compile Include="Connection\ConnectionController.cs" />
     <Compile Include="Connection\ConnectionWorkflow.cs" />
-    <Compile Include="Constants.cs" />
+    <Compile Include="Helpers\Constants.cs" />
     <Compile Include="Binding\BindingWorkflow.cs" />
     <Compile Include="Binding\IBindingWorkflowExecutor.cs" />
     <Compile Include="HostedCommandControllerBase.cs" />
@@ -239,7 +241,7 @@
     <Compile Include="LocalServices\IProjectSystemHelper.cs" />
     <Compile Include="MefServices\IActiveSolutionTracker.cs" />
     <Compile Include="LocalServices\IProjectSystemFilter.cs" />
-    <Compile Include="IServiceProviderExtensions.cs" />
+    <Compile Include="Helpers\IServiceProviderExtensions.cs" />
     <Compile Include="MefServices\IIntegrationSettings.cs" />
     <Compile Include="MefServices\IWebBrowser.cs" />
     <Compile Include="LocalServices\IFileSystem.cs" />
@@ -253,7 +255,7 @@
     <Compile Include="Persistence\ISolutionBindingSerializer.cs" />
     <Compile Include="Progress\IProgressStepRunnerWrapper.cs" />
     <Compile Include="ProfileConflicts\RuleSetConflictsController.cs" />
-    <Compile Include="RuleSetHelper.cs" />
+    <Compile Include="Helpers\RuleSetHelper.cs" />
     <Compile Include="Language.cs" />
     <Compile Include="LocalServices\ProjectSystemFilter.cs" />
     <Compile Include="Service\DataModel\MinimumSupportedServerPlugin.cs" />
@@ -284,7 +286,6 @@
     <Compile Include="MefServices\ITelemetryLogger.cs" />
     <Compile Include="Persistence\BoundSonarQubeProject.cs" />
     <Compile Include="Persistence\BasicAuthCredentials.cs" />
-    <Compile Include="PathHelper.cs" />
     <Compile Include="Persistence\ICredentials.cs" />
     <Compile Include="Persistence\SolutionBindingSerializer.cs" />
     <Compile Include="Progress\IProgressControlHost.cs" />
@@ -292,7 +293,7 @@
     <Compile Include="Service\AuthenticationHeaderProvider.cs" />
     <Compile Include="Service\AuthenticationType.cs" />
     <Compile Include="Service\DataModel\ConnectionInformation.cs" />
-    <Compile Include="JsonHelper.cs" />
+    <Compile Include="Helpers\JsonHelper.cs" />
     <Compile Include="Service\DataModel\ProjectInformation.cs" />
     <Compile Include="Service\DataModel\QualityProfile.cs" />
     <Compile Include="Service\SonarQubeServiceWrapper.cs" />
@@ -308,7 +309,15 @@
     <Compile Include="MefServices\ActiveSolutionTracker.cs" />
     <Compile Include="TeamExplorer\ISectionController.cs" />
     <Compile Include="TelemetryLoggerAccessor.cs" />
-    <Compile Include="UriExtensions.cs" />
+    <Compile Include="Telemetry\ITelemetryClient.cs" />
+    <Compile Include="Telemetry\ITelemetryDataRepository.cs" />
+    <Compile Include="Telemetry\ITelemetryManager.cs" />
+    <Compile Include="Telemetry\TelemetryClient.cs" />
+    <Compile Include="Telemetry\TelemetryData.cs" />
+    <Compile Include="Telemetry\TelemetryDataRepository.cs" />
+    <Compile Include="Telemetry\TelemetryManager.cs" />
+    <Compile Include="Telemetry\TelemetryPayload.cs" />
+    <Compile Include="Helpers\UriExtensions.cs" />
     <Compile Include="MefServices\VsSessionHost.cs" />
     <Compile Include="MefServices\WebBrowser.cs" />
     <Compile Include="WPF\ContextualCommandsCollection.cs" />
@@ -317,7 +326,7 @@
     <Compile Include="TeamExplorer\NotificationIds.cs" />
     <Compile Include="TeamExplorer\ServerViewModel.cs" />
     <Compile Include="LocalServices\ProjectSystemHelper.cs" />
-    <Compile Include="VsShellUtils.cs" />
+    <Compile Include="Helpers\VsShellUtils.cs" />
     <Compile Include="TeamExplorer\ProjectViewModel.cs" />
     <Compile Include="WPF\BoolToVisiblityConverter.cs" />
     <Compile Include="Connection\UI\ConnectionInfoDialogViewModel.cs" />
